# todo-app

./: .gitignore  alembic.ini  main.py  pyproject.toml  readme.md
alembic/versions/: 1c6a3c3128e3_update_tabel.py  2443102041f6_create_todos_table.py  58ffc4ef59d9_add_completed_column_to_todos.py  5dea003836fa_your_message.py  74b369574cc5_create_todos_table.py  cd4cf4fed0b9_update_tabel.py  ce32d58082e8_update_tabel.py
config/: database.py
model/: todo_model.py
